support dependency injection of List and Dict